--- a/src/components/CSS/AboutMe.css
+++ b/src/components/CSS/AboutMe.css
@@ -18,7 +18,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0);
   padding: 20px;
   opacity: 0;
   transition: opacity 0.5s;
