--- a/src/components/CSS/Home.css
+++ b/src/components/CSS/Home.css
@@ -1,5 +1,14 @@
-.transparent-image {
-  opacity: 0.8;
+.img {
+  width: 500px;
+  height: 500px!important;
+  border:2px solid #fff;
+  background: url(../../assets/IMG_7060.jpg) no-repeat;
+  -moz-box-shadow: 10px 10px 5px #ccc;
+  -webkit-box-shadow: 10px 10px 5px #ccc;
+  box-shadow: 10px 10px 5px #ccc;
+  -moz-border-radius:25px;
+  -webkit-border-radius:25px;
+  border-radius:25px;
 }
 
 .animated-text-container {
@@ -37,11 +46,4 @@
 
 .mono-font {
   font-family: "VT323", monospace;
-}
-
-/* Additional CSS for the image container */
-.image-container {
-  position: relative;
-  max-height: 100%;
-  max-width: 80%;
 }
