--- a/src/components/CSS/Springmodal.css
+++ b/src/components/CSS/Springmodal.css
@@ -1,4 +1,5 @@
-/* Add any global styles here */
+
+
 
 /* ExampleWrapper styles */
 .px-4 {
@@ -242,8 +243,9 @@
   place-items: center;
 }
 
-.img {
+.img img{
   max-width: 45%;
+  height: 100% !important;
   opacity: 50%;
 }
 
@@ -337,7 +339,6 @@
   color: #4f46e5;
 }
 
-
-
-
-
+.margin{
+  margin-top: 30px;
+}
