--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -24,62 +24,6 @@ body,
 
 }
 
-.App {
-  .navigation {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    .logo {
-      margin: 20px;
-      a {
-        img {
-          height: 150px;
-        }
-      }
-    }
-    nav {
-      ul {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        padding-inline-start: 0;
-        list-style-type: none;
-        li {
-          margin: 0 20px;
-          a {
-            text-decoration: none;
-            font-size: 20px;
-            color: white;
-            // transition: color 0.3s ease-in-out;
-          }
-          .selected {
-            color: #579de6;
-          }
-        }
-      }
-    }
-  }
-  main {
-    margin-top: 50px;
-    display: flex;
-    justify-content: center;
-    color: white;
-    img {
-      max-width: 700px;
-    }
-  }
-}
-
-h1{
-  color: white;
-}
-
-
-img{
-  display: grid;
-  place-items: center;
-}
 
 /* App.scss */
 .centered-container {
@@ -90,15 +34,19 @@ img{
 }
 
 /* Optional styles for the image, adjust as needed */
-.centered-container img {
-  max-width: 100%;
-  max-height: 100%;
-}
+
 
 
 
 
 .App{
   position: relative;
-  z-index: 1;
+  z-index: 2;
+}
+
+.wave{
+  position: fixed;
+  bottom: -63px;
+  opacity: 40%;
+  z-index: -1;
 }
