--- a/src/components/CSS/Background.css
+++ b/src/components/CSS/Background.css
@@ -1,247 +1,245 @@
-
 @keyframes move {
-    100% {
-        transform: translate3d(0, 0, 1px) rotate(360deg);
-    }
+  100% {
+    transform: translate3d(0, 0, 1px) rotate(360deg);
+  }
 }
 
 .background {
-    position: fixed;
-    width: 100vw;
-    height: 100vh;
-    top: 0;
-    left: 0;
-    background: #000000;
-    overflow: hidden;
-    z-index: -1;
-  }
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  background: #000000;
+  overflow: hidden;
+  z-index: -1;
+}
 
 .background span {
-    width: 1vmin;
-    height: 1vmin;
-    border-radius: 1vmin;
-    backface-visibility: hidden;
-    position: absolute;
-    animation: move;
-    animation-duration: 30;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
+  width: 1vmin;
+  height: 1vmin;
+  border-radius: 1vmin;
+  backface-visibility: hidden;
+  position: absolute;
+  animation: move;
+  animation-duration: 30;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
 }
-
 
 .background span:nth-child(0) {
-    color: #7e58e4;
-    top: 83%;
-    left: 47%;
-    animation-duration: 24s;
-    animation-delay: -97s;
-    transform-origin: -13vw 9vh;
-    box-shadow: 2vmin 0 0.6499563386766527vmin currentColor;
+  color: #7e58e4;
+  top: 83%;
+  left: 47%;
+  animation-duration: 24s;
+  animation-delay: -97s;
+  transform-origin: -13vw 9vh;
+  box-shadow: 2vmin 0 0.6499563386766527vmin currentColor;
 }
 .background span:nth-child(1) {
-    color: #583C87;
-    top: 76%;
-    left: 26%;
-    animation-duration: 53s;
-    animation-delay: -87s;
-    transform-origin: 15vw 11vh;
-    box-shadow: -2vmin 0 0.5045718232453vmin currentColor;
+  color: #583c87;
+  top: 76%;
+  left: 26%;
+  animation-duration: 53s;
+  animation-delay: -87s;
+  transform-origin: 15vw 11vh;
+  box-shadow: -2vmin 0 0.5045718232453vmin currentColor;
 }
 .background span:nth-child(2) {
-    color: #7e58e4;
-    top: 76%;
-    left: 99%;
-    animation-duration: 61s;
-    animation-delay: -102s;
-    transform-origin: -5vw 22vh;
-    box-shadow: -2vmin 0 0.4951226370831425vmin currentColor;
+  color: #7e58e4;
+  top: 76%;
+  left: 99%;
+  animation-duration: 61s;
+  animation-delay: -102s;
+  transform-origin: -5vw 22vh;
+  box-shadow: -2vmin 0 0.4951226370831425vmin currentColor;
 }
 .background span:nth-child(3) {
-    color: #583C87;
-    top: 97%;
-    left: 96%;
-    animation-duration: 130s;
-    animation-delay: -40s;
-    transform-origin: 3vw -7vh;
-    box-shadow: 2vmin 0 0.8300215337646271vmin currentColor;
+  color: #583c87;
+  top: 97%;
+  left: 96%;
+  animation-duration: 130s;
+  animation-delay: -40s;
+  transform-origin: 3vw -7vh;
+  box-shadow: 2vmin 0 0.8300215337646271vmin currentColor;
 }
 .background span:nth-child(4) {
-    color: #bababa;
-    top: 28%;
-    left: 2%;
-    animation-duration: 67s;
-    animation-delay: -127s;
-    transform-origin: -9vw -1vh;
-    box-shadow: -2vmin 0 1.0374214515625284vmin currentColor;
+  color: #bababa;
+  top: 28%;
+  left: 2%;
+  animation-duration: 67s;
+  animation-delay: -127s;
+  transform-origin: -9vw -1vh;
+  box-shadow: -2vmin 0 1.0374214515625284vmin currentColor;
 }
 .background span:nth-child(5) {
-    color: #bababa;
-    top: 95%;
-    left: 96%;
-    animation-duration: 100s;
-    animation-delay: -51s;
-    transform-origin: -18vw 8vh;
-    box-shadow: 2vmin 0 1.0580432762223149vmin currentColor;
+  color: #bababa;
+  top: 95%;
+  left: 96%;
+  animation-duration: 100s;
+  animation-delay: -51s;
+  transform-origin: -18vw 8vh;
+  box-shadow: 2vmin 0 1.0580432762223149vmin currentColor;
 }
 .background span:nth-child(6) {
-    color: #bababa;
-    top: 98%;
-    left: 51%;
-    animation-duration: 198s;
-    animation-delay: -2s;
-    transform-origin: -4vw 12vh;
-    box-shadow: 2vmin 0 0.4336156776152953vmin currentColor;
+  color: #bababa;
+  top: 98%;
+  left: 51%;
+  animation-duration: 198s;
+  animation-delay: -2s;
+  transform-origin: -4vw 12vh;
+  box-shadow: 2vmin 0 0.4336156776152953vmin currentColor;
 }
 .background span:nth-child(7) {
-    color: #bababa;
-    top: 13%;
-    left: 55%;
-    animation-duration: 24s;
-    animation-delay: -81s;
-    transform-origin: -8vw -13vh;
-    box-shadow: -2vmin 0 0.869527097441444vmin currentColor;
+  color: #bababa;
+  top: 13%;
+  left: 55%;
+  animation-duration: 24s;
+  animation-delay: -81s;
+  transform-origin: -8vw -13vh;
+  box-shadow: -2vmin 0 0.869527097441444vmin currentColor;
 }
 .background span:nth-child(8) {
-    color: #bababa;
-    top: 2%;
-    left: 62%;
-    animation-duration: 107s;
-    animation-delay: -97s;
-    transform-origin: -4vw -19vh;
-    box-shadow: -2vmin 0 1.164207055347348vmin currentColor;
+  color: #bababa;
+  top: 2%;
+  left: 62%;
+  animation-duration: 107s;
+  animation-delay: -97s;
+  transform-origin: -4vw -19vh;
+  box-shadow: -2vmin 0 1.164207055347348vmin currentColor;
 }
 .background span:nth-child(9) {
-    color: #bababa;
-    top: 3%;
-    left: 31%;
-    animation-duration: 94s;
-    animation-delay: -17s;
-    transform-origin: 0vw 19vh;
-    box-shadow: 2vmin 0 0.5714104101693047vmin currentColor;
+  color: #bababa;
+  top: 3%;
+  left: 31%;
+  animation-duration: 94s;
+  animation-delay: -17s;
+  transform-origin: 0vw 19vh;
+  box-shadow: 2vmin 0 0.5714104101693047vmin currentColor;
 }
 .background span:nth-child(10) {
-    color: #bababa;
-    top: 69%;
-    left: 100%;
-    animation-duration: 147s;
-    animation-delay: -48s;
-    transform-origin: -14vw -2vh;
-    box-shadow: -2vmin 0 0.8797930354246428vmin currentColor;
+  color: #bababa;
+  top: 69%;
+  left: 100%;
+  animation-duration: 147s;
+  animation-delay: -48s;
+  transform-origin: -14vw -2vh;
+  box-shadow: -2vmin 0 0.8797930354246428vmin currentColor;
 }
 .background span:nth-child(11) {
-    color: #7e58e4;
-    top: 14%;
-    left: 62%;
-    animation-duration: 51s;
-    animation-delay: -96s;
-    transform-origin: 24vw -20vh;
-    box-shadow: 2vmin 0 1.1393816473828429vmin currentColor;
+  color: #7e58e4;
+  top: 14%;
+  left: 62%;
+  animation-duration: 51s;
+  animation-delay: -96s;
+  transform-origin: 24vw -20vh;
+  box-shadow: 2vmin 0 1.1393816473828429vmin currentColor;
 }
 .background span:nth-child(12) {
-    color: #bababa;
-    top: 63%;
-    left: 98%;
-    animation-duration: 129s;
-    animation-delay: -121s;
-    transform-origin: 12vw -24vh;
-    box-shadow: -2vmin 0 1.1388698050016326vmin currentColor;
+  color: #bababa;
+  top: 63%;
+  left: 98%;
+  animation-duration: 129s;
+  animation-delay: -121s;
+  transform-origin: 12vw -24vh;
+  box-shadow: -2vmin 0 1.1388698050016326vmin currentColor;
 }
 .background span:nth-child(13) {
-    color: #7e58e4;
-    top: 1%;
-    left: 91%;
-    animation-duration: 18s;
-    animation-delay: -23s;
-    transform-origin: 6vw 8vh;
-    box-shadow: -2vmin 0 0.6326535161106464vmin currentColor;
+  color: #7e58e4;
+  top: 1%;
+  left: 91%;
+  animation-duration: 18s;
+  animation-delay: -23s;
+  transform-origin: 6vw 8vh;
+  box-shadow: -2vmin 0 0.6326535161106464vmin currentColor;
 }
 .background span:nth-child(14) {
-    color: #bababa;
-    top: 83%;
-    left: 50%;
-    animation-duration: 10s;
-    animation-delay: -174s;
-    transform-origin: 20vw -19vh;
-    box-shadow: 2vmin 0 0.34235727006006056vmin currentColor;
+  color: #bababa;
+  top: 83%;
+  left: 50%;
+  animation-duration: 10s;
+  animation-delay: -174s;
+  transform-origin: 20vw -19vh;
+  box-shadow: 2vmin 0 0.34235727006006056vmin currentColor;
 }
 .background span:nth-child(15) {
-    color: #bababa;
-    top: 49%;
-    left: 56%;
-    animation-duration: 26s;
-    animation-delay: -46s;
-    transform-origin: -23vw 24vh;
-    box-shadow: -2vmin 0 0.8549597752121245vmin currentColor;
+  color: #bababa;
+  top: 49%;
+  left: 56%;
+  animation-duration: 26s;
+  animation-delay: -46s;
+  transform-origin: -23vw 24vh;
+  box-shadow: -2vmin 0 0.8549597752121245vmin currentColor;
 }
 .background span:nth-child(16) {
-    color: #bababa;
-    top: 100%;
-    left: 16%;
-    animation-duration: 129s;
-    animation-delay: -3s;
-    transform-origin: -14vw -11vh;
-    box-shadow: 2vmin 0 0.8030530208482516vmin currentColor;
+  color: #bababa;
+  top: 100%;
+  left: 16%;
+  animation-duration: 129s;
+  animation-delay: -3s;
+  transform-origin: -14vw -11vh;
+  box-shadow: 2vmin 0 0.8030530208482516vmin currentColor;
 }
 .background span:nth-child(17) {
-    color: #583C87;
-    top: 83%;
-    left: 1%;
-    animation-duration: 143s;
-    animation-delay: -22s;
-    transform-origin: -13vw -9vh;
-    box-shadow: 2vmin 0 1.2036146668259207vmin currentColor;
+  color: #583c87;
+  top: 83%;
+  left: 1%;
+  animation-duration: 143s;
+  animation-delay: -22s;
+  transform-origin: -13vw -9vh;
+  box-shadow: 2vmin 0 1.2036146668259207vmin currentColor;
 }
 .background span:nth-child(18) {
-    color: #bababa;
-    top: 8%;
-    left: 3%;
-    animation-duration: 128s;
-    animation-delay: -91s;
-    transform-origin: 24vw -13vh;
-    box-shadow: 2vmin 0 0.9192216907597988vmin currentColor;
+  color: #bababa;
+  top: 8%;
+  left: 3%;
+  animation-duration: 128s;
+  animation-delay: -91s;
+  transform-origin: 24vw -13vh;
+  box-shadow: 2vmin 0 0.9192216907597988vmin currentColor;
 }
 .background span:nth-child(19) {
-    color: #7e58e4;
-    top: 77%;
-    left: 23%;
-    animation-duration: 199s;
-    animation-delay: -136s;
-    transform-origin: -5vw 12vh;
-    box-shadow: -2vmin 0 1.222967044098957vmin currentColor;
+  color: #7e58e4;
+  top: 77%;
+  left: 23%;
+  animation-duration: 199s;
+  animation-delay: -136s;
+  transform-origin: -5vw 12vh;
+  box-shadow: -2vmin 0 1.222967044098957vmin currentColor;
 }
 .background span:nth-child(20) {
-    color: #7e58e4;
-    top: 34%;
-    left: 99%;
-    animation-duration: 76s;
-    animation-delay: -50s;
-    transform-origin: 13vw 3vh;
-    box-shadow: 2vmin 0 0.6184760421350366vmin currentColor;
+  color: #7e58e4;
+  top: 34%;
+  left: 99%;
+  animation-duration: 76s;
+  animation-delay: -50s;
+  transform-origin: 13vw 3vh;
+  box-shadow: 2vmin 0 0.6184760421350366vmin currentColor;
 }
 .background span:nth-child(21) {
-    color: #7e58e4;
-    top: 93%;
-    left: 39%;
-    animation-duration: 71s;
-    animation-delay: -118s;
-    transform-origin: 17vw -16vh;
-    box-shadow: -2vmin 0 1.228137257321656vmin currentColor;
+  color: #7e58e4;
+  top: 93%;
+  left: 39%;
+  animation-duration: 71s;
+  animation-delay: -118s;
+  transform-origin: 17vw -16vh;
+  box-shadow: -2vmin 0 1.228137257321656vmin currentColor;
 }
 .background span:nth-child(22) {
-    color: #bababa;
-    top: 37%;
-    left: 91%;
-    animation-duration: 8s;
-    animation-delay: -109s;
-    transform-origin: -22vw -18vh;
-    box-shadow: 2vmin 0 0.36262621877618395vmin currentColor;
+  color: #bababa;
+  top: 37%;
+  left: 91%;
+  animation-duration: 8s;
+  animation-delay: -109s;
+  transform-origin: -22vw -18vh;
+  box-shadow: 2vmin 0 0.36262621877618395vmin currentColor;
 }
 .background span:nth-child(23) {
-    color: #583C87;
-    top: 33%;
-    left: 33%;
-    animation-duration: 152s;
-    animation-delay: -175s;
-    transform-origin: -20vw 10vh;
-    box-shadow: 2vmin 0 0.6243626948735606vmin currentColor;
+  color: #583c87;
+  top: 33%;
+  left: 33%;
+  animation-duration: 152s;
+  animation-delay: -175s;
+  transform-origin: -20vw 10vh;
+  box-shadow: 2vmin 0 0.6243626948735606vmin currentColor;
 }
