--- a/src/components/CSS/Springmodal.css
+++ b/src/components/CSS/Springmodal.css
@@ -1,6 +1,3 @@
-
-
-
 /* ExampleWrapper styles */
 .px-4 {
   padding-left: 1rem;
@@ -243,7 +240,7 @@
   place-items: center;
 }
 
-.img img{
+.img img {
   max-width: 45%;
   height: 100% !important;
   opacity: 50%;
@@ -259,20 +256,18 @@
 }
 
 .info {
- margin: 0.5em;
+  margin: 0.5em;
 
   padding: 15px;
   display: flex;
   justify-content: space-between;
   background-color: rgba(255, 255, 255, 0.377);
-  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
-
-  
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px,
+    rgba(0, 0, 0, 0.22) 0px 15px 12px;
 }
 
-.info p{
+.info p {
   color: black;
-  
 }
 
 .purplebutton {
@@ -313,7 +308,6 @@
   background-color: #f2f2f2; /* Beispiel: Die Hintergrundfarbe ändert sich bei Hover */
 }
 
-
 .padding-bottom {
   padding-bottom: 20px;
 }
@@ -325,13 +319,12 @@
   color: #fff;
   border: 3px solid #4c45d1;
   background-image: -webkit-linear-gradient(30deg, white 50%, transparent 50%);
-  background-image: linear-gradient(30deg,  #4f46e5 50%, transparent 50%);
+  background-image: linear-gradient(30deg, #4f46e5 50%, transparent 50%);
   background-size: 500px;
   background-repeat: no-repeat;
   background-position: 0%;
   -webkit-transition: background 300ms ease-in-out;
   transition: background 300ms ease-in-out;
- 
 }
 
 .send:hover {
@@ -339,6 +332,6 @@
   color: #4f46e5;
 }
 
-.margin{
+.margin {
   margin-top: 30px;
 }
