--- a/src/components/CSS/Projects.scss
+++ b/src/components/CSS/Projects.scss
@@ -14,11 +14,12 @@ $bp-lg: 800px;
 
 
 
-
 .page-content {
-  display: grid;
-  place-items: center;
-  grid-gap: 1rem;
+  gap: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   padding: 1rem;
   max-width: 1024px;
   margin: 0 auto;
@@ -26,11 +27,13 @@ $bp-lg: 800px;
   font-family: var(--font-sans);
   
   @media (min-width: $bp-md) {
-    grid-template-columns: repeat(2, 1fr);
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
   }
   
   @media (min-width: $bp-lg) {
-    grid-template-columns: repeat(4, 1fr);
+    flex-wrap: nowrap;
   }
 }
 
