--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -3,6 +3,8 @@
 * {
   font-family: 'Montserrat', sans-serif;
   box-sizing: border-box;
+  color: white;
+  text-decoration: none !important;
 }
 
 
