--- a/src/components/CSS/IconTable.css
+++ b/src/components/CSS/IconTable.css
@@ -2,27 +2,40 @@
 
 .icon-table-container {
   display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  margin-top: 30px;
+  overflow: hidden;
+  margin-bottom: 20em;
+}
+
+.icon-scroll-container {
+  width: 100vw; /* Set the width of the scrolling container to 100vw */
+  overflow: hidden;
 }
 
 .icon-column {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin: 20px;
+  z-index: 1001;
 }
 
 .icon-category {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 20px;
+  margin: 0 20px;
 }
 
 .icon-image {
   width: 100px;
   height: 100px;
   margin-bottom: 10px;
+  filter: grayscale(100%);
+}
+
+/* Define the scrolling animation */
+@keyframes scrollIcons {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(-100%);
+  }
 }
