--- a/src/components/CSS/IconTable.css
+++ b/src/components/CSS/IconTable.css
@@ -1,4 +1,3 @@
-/* IconTable.css */
 
 .icon-table-container {
   display: flex;
@@ -7,13 +6,22 @@
 }
 
 .icon-scroll-container {
-  width: 100vw; /* Set the width of the scrolling container to 100vw */
+  width: 100vw;
   overflow: hidden;
+  /* Make the scrollbar invisible */
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+
+.icon-scroll-container::-webkit-scrollbar {
+  display: none;
 }
 
 .icon-column {
   display: flex;
   z-index: 1001;
+  /* Adjust the animation duration to match the number of items */
+  animation: scrollIcons 10s linear infinite;
 }
 
 .icon-category {
@@ -32,10 +40,11 @@
 
 /* Define the scrolling animation */
 @keyframes scrollIcons {
-  from {
+  0% {
     transform: translateX(0);
   }
-  to {
-    transform: translateX(-100%);
+  100% {
+    /* Calculate the total width to ensure smooth looping */
+    transform: translateX(calc(-120px * 6));
   }
 }
