--- a/src/components/CSS/Footer.css
+++ b/src/components/CSS/Footer.css
@@ -3,10 +3,10 @@ main {
   margin-bottom: 10em;
 }
 .footer-position {
-  width: 100%;
+ width: 100%;
   position: fixed;
   bottom: 0;
-  z-index: -1;
+  z-index: 999;
   background-color: transparent;
 
  
@@ -19,4 +19,5 @@ text-decoration: none!important;
 
 .icon-text {
   padding: 13px;
+  color: white !important;
 }
