--- a/src/components/CSS/PageNotFound.css
+++ b/src/components/CSS/PageNotFound.css
@@ -1,11 +1,24 @@
+@import url('https://fonts.googleapis.com/css?family=Fira+Mono:400');
+
 /* PageNotFound.css */
 
 .notFound {
   width: 100vw;
   height: 100vh;
+  font-size: 96px;
+  font-family: 'Fira Mono', monospace;
+  letter-spacing: -7px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+  background: transparent;
+  
+ 
+ 
 }
 
-h1 {
+ h1 {
   text-align: center;
 }
 
@@ -20,3 +33,68 @@ h1 {
   filter: drop-shadow(0px 100px 25px #59cce9);
   opacity: 96%;
 }
+
+@keyframes glitch{
+  2%,64%{
+    transform: translate(2px,0) skew(0deg);
+  }
+  4%,60%{
+    transform: translate(-2px,0) skew(0deg);
+  }
+  62%{
+    transform: translate(0,0) skew(5deg); 
+  }
+}
+
+.div{
+  animation: glitch 1s linear infinite;
+  z-index: 999;
+  color: white;
+}
+
+
+
+.div:before,
+.div:after{
+  content: attr(title);
+  position: absolute;
+  left: 0;
+}
+
+@keyframes glitchTop{
+  2%,64%{
+    transform: translate(2px,-2px);
+  }
+  4%,60%{
+    transform: translate(-2px,2px);
+  }
+  62%{
+    transform: translate(13px,-1px) skew(-13deg); 
+  }
+}
+
+.div:before{
+  animation: glitchTop 1s linear infinite;
+  clip-path: polygon(0 0, 100% 0, 100% 33%, 0 33%);
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 33%, 0 33%);
+}
+
+
+@keyframes glitchBotom{
+  2%,64%{
+    transform: translate(-2px,0);
+  }
+  4%,60%{
+    transform: translate(-2px,0);
+  }
+  62%{
+    transform: translate(-22px,5px) skew(21deg); 
+  }
+}
+
+.div:after{
+  animation: glitchBotom 1.5s linear infinite;
+  clip-path: polygon(0 67%, 100% 67%, 100% 100%, 0 100%);
+  -webkit-clip-path: polygon(0 67%, 100% 67%, 100% 100%, 0 100%);
+}
+
