--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -3,7 +3,7 @@
 * {
   font-family: 'Montserrat', sans-serif;
   box-sizing: border-box;
-  color: white;
+  /*color: white;*/
   text-decoration: none !important;
 }
 
