--- a/src/components/CSS/Home.css
+++ b/src/components/CSS/Home.css
@@ -3,7 +3,7 @@
   width: 500px;
   height: 500px !important;
   border: 2px solid #fff;
-  background: url(../../assets/IMG_7060.jpg) no-repeat;
+  background: url(../../assets/IMG_7060.JPG) no-repeat;
   -moz-box-shadow: 10px 10px 5px #ccc;
   -webkit-box-shadow: 10px 10px 5px #ccc;
   box-shadow: 10px 10px 5px #ccc;
